--- a/MapKitDemo/Base.lproj/Main.storyboard
+++ b/MapKitDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TH3-fH-Xtf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TH3-fH-Xtf">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -243,7 +243,7 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="My Location" id="7gJ-8n-mWh">
-                        <barButtonItem key="rightBarButtonItem" title="Change Type" id="hvg-SC-iQ3">
+                        <barButtonItem key="rightBarButtonItem" title="Standard" id="hvg-SC-iQ3">
                             <connections>
                                 <action selector="changeTypeButtonClicked:" destination="fXa-kF-ocy" id="Vc1-A0-dPw"/>
                             </connections>
